--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,8 @@
     <string name="title_activity_testing_search">TestingSearch</string>
     <string name="title_activity_posting_loker1">PostingLoker1Activity</string>
     <string name="title_activity_posting_loker2">PostingLoker2Activity</string>
+    <string name="title_activity_home_page_tes">HomePageTes</string>
+    <string name="title_activity_bottom_bar">BottomBar</string>
+    <string name="title_activity_home_tes">HomeTes</string>
+    <string name="title_activity_nav_graph">NavGraph</string>
 </resources>
